Tue Nov 28 15:08:38 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added OmSplitOnCharsNode, which does a subset of OmRegexSplitNode
	  but less slowly.

	* Modified RegexSplit node and regexcommon so that less copying
	  of strings is needed.

Tue Nov 28 13:42:41 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Moved the Btree's bitmap into a separate object.

Tue Nov 28 13:06:36 GMT 2000 Olly Betts

	* Eliminated OmDocumentParams.

	* Removed unnecessary mutex from OmDocument::Internal.

Mon Nov 27 18:45:27 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement get_position_list() on databases.  Untested.  Also needs
	  some work to make consistent with open_position_list() on posting
	  lists: see todo list.

Mon Nov 27 18:29:00 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change #define LEVEL ... to #define GET_LEVEL ... in btree_util.h:
	  fixes problem reported by includetest

Mon Nov 27 18:20:42 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a set of modifications to the todo.xml.  Also, add a
	  "release" field, recording the release that the work must be
	  performed by.

Mon Nov 27 18:08:35 GMT 2000 Olly Betts

	* A RefCntPtr now copes with being assigned to itself (used to
	  delete the underlying object if the reference count was 1).  Added
	  regression test (refcnt2).

	* Now overwrite pointer inside RefCntPtr before deleting the pointed
	  to object so there's no window where another thread can access the
	  pointer and get the just-deleted object.

Mon Nov 27 14:36:59 GMT 2000 Olly Betts

	* OmError class now optionally stores an errno value.

Mon Nov 27 13:04:18 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Quartztest builds its test databases in a subdirectory, which
	  is now in .cvsignore, so we shouldn't get cvs complaining about
	  so many unknown files any more.

Mon Nov 27 12:53:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
