@@ -112,6 +112,18 @@ class OmDocument {
 	 */
 	OmData get_data() const;
 
+	void add_key(om_keyno keyno, const OmKey &key);
+
+	/** Add an occurrence of a term to the document.
+	 *
+	 *  Multiple occurrences of the term at the same position are represented
+	 *  only once in the positional information, but do increase the wdf.
+	 *
+	 *  @param tname  The name of the term.
+	 *  @param tpos   The position of the term.
+	 */
+	void add_posting(const om_termname & tname, om_termpos tpos);
+	
 	/** Returns a string representing the OmDocument.
 	 *  Introspection method.
 	 */
